flux/apps/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
  labels:
    app: searxng
spec:
  selector:
    matchLabels:
      app: searxng
  replicas: 1
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: ghcr.io/searxng/searxng:2026.9.30-a9d990033 # {"$imagepolicy": "flux-system:searxng-policy"}
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 60
          volumeMounts:
            - name: searxng-settings
              mountPath: /etc/searxng/settings.yml
              subPath: settings.yml
              readOnly: True
            - name: searxng-cache
              mountPath: /var/cache/searxng
              readOnly: False
          resources:
            requests:
              cpu: 200m
              memory: 128M
            limits:
              cpu: 1000m
              memory: 2G
        - name: mcp
          image: docker.io/isokoliuk/mcp-searxng:2.5.0 # {"$imagepolicy": "flux-system:mcp-searxng-policy"}
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 60
          resources:
            requests:
              cpu: 100m
              memory: 128M
            limits:
              cpu: 500m
              memory: 1G
      restartPolicy: Always
      volumes:
        - name: searxng-settings
          configMap:
            name: searxng-settings
        - name: searxng-cache
          emptyDir: {}
