flux/apps/searxng/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  searxng
  namespace: searxng
spec:
  selector:
    app:  searxng
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-searxng
  namespace: searxng
spec:
  selector:
    app: searxng
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
