flux/apps/searxng/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  namespace: searxng
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - searxng.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: searxng
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-searxng
  namespace: searxng
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - mcp-searxng.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: searxng
      port: 3000
